# test_c

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  lancement.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
agent/: model.py
config/: settings.py
data/: crypto_fetcher.py  macro_fetcher.py  news_fetcher.py  pipeline.py  sentiment_fetcher.py
features/: scaler.py
live/: dashboard.py  executor.py
monitoring/: README.md  docker-compose.yml  loki-config.yml  promtail-config.yml
monitoring/grafana/dashboards/: mn-bot.json
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/loki/: rules.yml
python/backtest/: data_loader.py  event_engine.py  vectorbt_runner.py
python/bot/: cli.py  config.py  logger.py  orchestrator.py  risk.py  strategy.py
rust_core/: Cargo.toml
rust_core/src/: execution.rs  lib.rs  market_data.rs  order_book.rs  tests.rs  types.rs
test_phases/phase2/: resume.md  test_phase2.md
test_phases/phase6/: test_phase6.md
test_phases/phase8/: resume.md  test_phase8.md
tests/: test_data.py  test_env.py  test_integration.py  test_live.py  test_training.py
tests/python/: test_data_loader.py  test_event_engine.py  test_orchestrator.py  test_risk.py  test_strategy.py
training/: backtest.py  logger.py  train.py
