[workspace]
resolver = "2"
members = ["rust_core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zeroize = { version = "1", features = ["derive"] }
wiremock = "0.6"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
