[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mn-bot"
version = "0.1.0"
description = "Market-neutral cash-and-carry crypto bot (BTC basis trade)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.4",
    "typer>=0.12",
    "httpx>=0.27",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=17",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
backtest = [
    "vectorbt>=0.26",
    "matplotlib>=3.8",
    "scipy>=1.13",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
    "maturin>=1.7",
]

[project.scripts]
mn-bot = "bot.cli:app"

[tool.maturin]
module-name = "mn_bot._rust"
python-source = "python"
manifest-path = "rust_core/Cargo.toml"
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "ASYNC"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["python"]
asyncio_mode = "auto"
