[package]
name = "rust_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "rust_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }
